force-app/main/default/objects/Class__c/fields/Has_Master_Student__c.field-meta.xml
<CustomField>
    <fullName>Has_Master_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a master student for this particular class was selected.</description>
    <label>Has Master Student?</label>
    <type>Checkbox</type>
</CustomField>