force-app/main/default/objects/Class__c/fields/Number_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Students__c</fullName>
    <description>A number of students taking the class.</description>
    <label>Number of Students</label>
    <summaryForeignKey>Class_Enrollment__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>