force-app/main/default/objects/Class__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>The subject of the class.</description>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Algebra</fullName>
            </value>
            <value>
                <fullName>Geometry</fullName>
            </value>
            <value>
                <fullName>Statistics</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>Physics (Advanced)</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>World History</fullName>
            </value>
            <value>
                <fullName>English Language</fullName>
            </value>
            <value>
                <fullName>German Language</fullName>
            </value>
            <value>
                <fullName>Psychology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>